--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MenteeMainActivity"></activity>
-        <activity android:name=".LoginActivityMentee" />
-        <activity android:name=".RegisterMenteeActivity" />
-        <activity android:name=".StartActivity">
+        <activity android:name=".MainActivities.MenteeMainActivity"></activity>
+        <activity android:name=".MainActivities.LoginActivityMentee" />
+        <activity android:name=".MainActivities.RegisterMenteeActivity" />
+        <activity android:name=".MainActivities.StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
