--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".MainActivities.questions.Question1" />
         <activity android:name=".MainActivities.activities.LoginActivityMentee" />
         <activity android:name=".MainActivities.activities.MenteeMainActivity" />
+        <activity android:name=".MainActivities.activities.MessageActivity"/>
         <activity android:name=".MainActivities.activities.StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
