--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivities.activities.MentorProfile"></activity>
+        <activity android:name=".MainActivities.questions.Question2_2"></activity>
+        <activity android:name=".MainActivities.activities.MentorProfile" />
         <activity android:name=".MainActivities.activities.MessageActivity" />
         <activity android:name=".MainActivities.questions.Question2_1_1_1_1_1" />
         <activity android:name=".MainActivities.questions.Question2_1_1_1_1" />
