--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ dependencies {
     implementation "com.google.android.gms:play-services-base:16.1.0"
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
+
     implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.firebase:firebase-core:16.0.8'
