--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".MainActivities.activities.ReportActivity"></activity>
+        <activity android:name=".MainActivities.activities.ViewFeedbacks" />
         <activity
-            android:parentActivityName=".MainActivities.activities.StartActivity"
-            android:name=".MainActivities.activities.ResetPassword"></activity>
+            android:name=".MainActivities.activities.ResetPassword"
+            android:parentActivityName=".MainActivities.activities.StartActivity" />
         <activity android:name=".MainActivities.questions.Question2_2_2_2_2" />
         <activity android:name=".MainActivities.questions.Question2_2_2_2" />
         <activity android:name=".MainActivities.questions.Question2_2_2" />
@@ -37,20 +39,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".MainActivities.Notification.MyFirebaseIdService"
+
+        <service
+            android:name=".MainActivities.Notification.MyFirebaseIdService"
             android:enabled="true"
-            android:exported="true"
-            >
+            android:exported="true">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-        <service android:name=".MainActivities.Notification.MyFirebaseMessagin"
+        <service
+            android:name=".MainActivities.Notification.MyFirebaseMessagin"
             android:enabled="true"
-            android:exported="true"
-            >
+            android:exported="true">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
     </application>
