--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivities.activities.ReportActivity"></activity>
+        <activity android:name=".MainActivities.questions.AnswerEquivalent3"></activity>
+        <activity android:name=".MainActivities.questions.AnswerEquivalent2" />
+        <activity android:name=".MainActivities.questions.QuestionRate1" />
+        <activity android:name=".MainActivities.questions.AnswerEquivalent1" />
+        <activity android:name=".QuestionRate" />
+        <activity android:name=".QuestionAvailability" />
+        <activity android:name=".MainActivities.activities.ReportActivity" />
         <activity android:name=".MainActivities.activities.ViewFeedbacks" />
         <activity
             android:name=".MainActivities.activities.ResetPassword"
